added langsmith to the mix

--- a/project-mecainic.ipynb
+++ b/project-mecainic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,19 +14,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import getpass\n",
-    "\n",
     "os.environ[\"PINECONE_API_KEY\"] = getpass.getpass(\"Pinecone API Key:\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from uuid import uuid4\n",
+    "unique_id = uuid4().hex[0:8]\n",
+    "\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_PROJECT\"] = f\"Mecainic - {unique_id}\"\n",
+    "os.environ[\"LANGCHAIN_ENDPOINT\"] = \"https://api.smith.langchain.com\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass(\"Enter your LangSmith API key:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -72,14 +84,14 @@
     }
    ],
    "source": [
-    "partial_car_manual_data = car_manual_data[:20]\n",
+    "partial_car_manual_data = car_manual_data\n",
     "\n",
     "print(partial_car_manual_data[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +104,7 @@
        " Document(page_content=\"status bar\\n119\\nKeyboard in centre display\\n121\\nChanging keyboard language in\\ncentre display\\n124\\nEnter the characters, letters and\\nwords manually in the centre display\\n124\\nChanging the appearance in the\\ncentre display\\n126\\nSwitching off and changing the\\nvolume of the system sound in the\\ncentre display\\n126\\nChanging system units\\n127\\nChanging system language\\n127\\nOther settings in the centre dis-\\nplay's top view\\n127\\nOpen contextual setup in the cen-\\ntre display\\n128\", metadata={'source': 'https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf', 'file_path': 'https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf', 'page': 4, 'total_pages': 720, 'format': 'PDF 1.4', 'title': '', 'author': '', 'subject': '', 'keywords': '', 'creator': '', 'producer': 'GPL Ghostscript 9.06', 'creationDate': \"D:20200421104728+02'00'\", 'modDate': \"D:20200421104728+02'00'\", 'trapped': ''})]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "392"
+       "400"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,15 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "from operator import itemgetter\n",
     "from langchain.schema.runnable import RunnablePassthrough\n",
-    "from langchain.schema.output_parser import StrOutputParser\n",
     "\n",
-    "retrieval_augmented_qa_chain = (\n",
+    "mecanic_qa_chain = (\n",
     "    {\"context\": itemgetter(\"question\") | retriever, \"question\": itemgetter(\"question\")}\n",
     "    | RunnablePassthrough.assign(context=itemgetter(\"context\"))\n",
     "    | {\"response\": rag_prompt | model, \"context\": itemgetter(\"context\")}\n",
@@ -251,25 +262,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = retrieval_augmented_qa_chain.invoke({\"question\" : \"What is the puporse of Event Data Recorder?\"})"
+    "response = mecanic_qa_chain.invoke({\"question\" : \"What is the purpose of Event Data Recorder?\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='The purpose of the Event Data Recorder is to provide assistance when taking evasive action and to automatically brake in the event of an impeded evasive maneuver with City Safety.', response_metadata={'token_usage': {'completion_tokens': 34, 'prompt_tokens': 2343, 'total_tokens': 2377}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': 'fp_3bc1b5746c', 'finish_reason': 'stop', 'logprobs': None})"
+       "AIMessage(content='The purpose of the Event Data Recorder (EDR) in the vehicle is to register and record data related to traffic accidents or collision-like situations, such as when the airbag deploys or the vehicle strikes an obstacle in the road. The data is recorded to increase understanding of how vehicle systems work in these types of situations.', response_metadata={'token_usage': {'completion_tokens': 65, 'prompt_tokens': 1936, 'total_tokens': 2001}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': 'fp_3bc1b5746c', 'finish_reason': 'stop', 'logprobs': None})"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,6 +288,37 @@
    "source": [
     "response[\"response\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'response': AIMessage(content='The primary purpose of the Event Data Recorder (EDR) is to register and record data related to traffic accidents or collision-like situations, such as when the airbag deploys or the vehicle strikes an obstacle in the road.', response_metadata={'token_usage': {'completion_tokens': 45, 'prompt_tokens': 1939, 'total_tokens': 1984}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': 'fp_3bc1b5746c', 'finish_reason': 'stop', 'logprobs': None}),\n",
+       " 'context': [Document(page_content=\"The EDR in this vehicle is designed to record\\ndata related to the following in the event of\\ntraffic accidents or collision-like situations:\\n•\\nHow the various systems in the car\\nworked\\n•\\nWhether the driver and passenger seat-\\nbelts were fastened/tensioned\\n•\\nThe driver's use of the accelerator or brake\\npedal\\n•\\nThe travel speed of the vehicle\\nThis information can help us understand the\\ncircumstances in which traffic accidents, inju-\\nries and damage occur. The EDR only records\\ndata when a non-trivial collision situation\\noccurs. The EDR does not record any data\\nduring normal driving conditions. Similarly, the\\nsystem never registers who is driving the vehi-\\ncle or the geographic location of the accident\\nor near-miss situation. However, other parties,\\nsuch as the police, could use the recorded\\ndata in combination with the type of person-\\nally identifiable information routinely collected\\nafter a traffic accident. Special equipment and\\naccess to either the vehicle or the EDR is\\nrequired to be able to interpret the registered\\ndata.\\nIn addition to the EDR, the car is equipped\\nwith a number of computers designed to con-\\ntinually check and monitor the function of the\\ncar. They can record data during normal driv-\\ning conditions, but in particular register faults\\naffecting the vehicle's operation and function-\\nality, or upon activation of the vehicle's driver\\nsupport function (e.g. City Safety and the auto\\nbrake function).\\nSome of the recorded data is required to ena-\\nble service and maintenance technicians to\\ndiagnose and remedy any faults that occurred\\nin the vehicle. The registered information is\\nalso needed to enable Volvo to satisfy legal\\nrequirements laid out in laws and by govern-\\nment authorities. Information registered in the\", metadata={'author': '', 'creationDate': \"D:20200421104728+02'00'\", 'creator': '', 'file_path': 'https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf', 'format': 'PDF 1.4', 'keywords': '', 'modDate': \"D:20200421104728+02'00'\", 'page': 36.0, 'producer': 'GPL Ghostscript 9.06', 'source': 'https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf', 'subject': '', 'title': '', 'total_pages': 720.0, 'trapped': ''}),\n",
+       "  Document(page_content='YOUR VOLVO\\n}}\\n35\\nSoftware updates\\nSo that you as a Volvo customer get the best\\nexperience of your car, Volvo continuously\\ndevelops the systems in the cars and the ser-\\nvices that you are offered.\\nIn connection with service at an authorised\\nVolvo dealer, the software in your Volvo will be\\nupdated to the latest version. The latest soft-\\nware update allows you to benefit from availa-\\nble improvements, including improvements\\nfrom earlier software updates.\\nFor more information about available updates\\nand frequently asked questions, visit\\nvolvocars.com/support.\\nNOTE\\nFunctionality after updating may vary\\ndepending on market, model, model year\\nand options.\\nRelated information\\n•\\nSensus - online connectivity and entertain-\\nment (p. 32)\\n•\\nManaging system updates via the Down-\\nload Centre (p. 619)\\nRecording data\\nAs part of Volvo\\'s safety and quality assur-\\nance, certain information about the vehicle\\'s\\noperation, functionality and incidents are\\nrecorded in the car.\\nEvent Data Recorder (EDR)\\nThis vehicle is equipped with an \"Event Data\\nRecorder\" (EDR). Its primary purpose is to\\nregister and record data related to traffic acci-\\ndents or collision-like situations, such as times\\nwhen the airbag deploys or the vehicle strikes\\nan obstacle in the road. The data is recorded in\\norder to increase understanding of how vehi-\\ncle systems work in these types of situations.\\nThe EDR is designed to record data related to\\nvehicle dynamics and safety systems for a\\nshort time, usually 30 seconds or less.\\nThe EDR in this vehicle is designed to record\\ndata related to the following in the event of\\ntraffic accidents or collision-like situations:\\n•\\nHow the various systems in the car\\nworked\\n•', metadata={'author': '', 'creationDate': \"D:20200421104728+02'00'\", 'creator': '', 'file_path': 'https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf', 'format': 'PDF 1.4', 'keywords': '', 'modDate': \"D:20200421104728+02'00'\", 'page': 36.0, 'producer': 'GPL Ghostscript 9.06', 'source': 'https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf', 'subject': '', 'title': '', 'total_pages': 720.0, 'trapped': ''}),\n",
+       "  Document(page_content='diagnose and remedy any faults that occurred\\nin the vehicle. The registered information is\\nalso needed to enable Volvo to satisfy legal\\nrequirements laid out in laws and by govern-\\nment authorities. Information registered in the\\nvehicle is stored in its computer until the vehi-\\ncle is serviced or repaired.', metadata={'author': '', 'creationDate': \"D:20200421104728+02'00'\", 'creator': '', 'file_path': 'https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf', 'format': 'PDF 1.4', 'keywords': '', 'modDate': \"D:20200421104728+02'00'\", 'page': 36.0, 'producer': 'GPL Ghostscript 9.06', 'source': 'https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf', 'subject': '', 'title': '', 'total_pages': 720.0, 'trapped': ''}),\n",
+       "  Document(page_content='DRIVER SUPPORT\\n* Option/accessory. 413\\nRadar unit\\nThe radar unit is used by several driver sup-\\nport systems and has the task of sensing\\nother vehicles.\\nRadar unit location\\nThe radar unit is used by the following func-\\ntions:\\n•\\nDistance Warning*\\n•\\nAdaptive cruise control*\\n•\\nPilot Assist*\\n•\\nLane assistance\\n•\\nCity Safety\\n•\\nSteering assistance at risk of collision\\nModification of the radar unit could result in its\\nuse being illegal.\\nRelated information\\n•\\nDriving support systems (p. 294)\\n•\\nLimitations for camera and radar unit\\n(p. 422)\\n•\\nRecommended maintenance for camera\\nand radar unit (p. 425)\\n•\\nType approval for radar device (p. 414)', metadata={'author': '', 'creationDate': \"D:20200421104728+02'00'\", 'creator': '', 'file_path': 'https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf', 'format': 'PDF 1.4', 'keywords': '', 'modDate': \"D:20200421104728+02'00'\", 'page': 414.0, 'producer': 'GPL Ghostscript 9.06', 'source': 'https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf', 'subject': '', 'title': '', 'total_pages': 720.0, 'trapped': ''})]}"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mecanic_qa_chain.invoke({\"question\" : \"what is the primary purpose of Event Data Recorder (EDR)?\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
