--- a/project-mecainic.ipynb
+++ b/project-mecainic.ipynb
@@ -318,7 +318,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dev_validation_questions = [\n",
+    "    \"what is the primary purpose of Event Data Recorder?\",\n",
+    "    \"how do you manage the centre display?\",\n",
+    "    \"how do I adjust the door mirrors?\"\n",
+    "    \"how do I lower the backrests in the rearseat?\"\n",
+    "    \"how do I lock and unlock the car?\"\n",
+    "    \"what is a care key?\"\n",
+    "]\n",
+    "\n",
+    "dev_key_words_it_should_mention = [\n",
+    "    {\"must_contain\": [\"EDR\"]},\n",
+    "    {\"must_contain\": [\"centre display\", \"display\"]},\n",
+    "    {\"must_contain\": [\"door mirrors\", \"door\", \"mirrors\"]},\n",
+    "    {\"must_contain\": [\"backrests\", \"rearseat\"]},\n",
+    "    {\"must_contain\": [\"lock\", \"unlock\"]},\n",
+    "    {\"must_contain\": [\"care\", \"key\"]},\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langsmith import Client\n",
+    "\n",
+    "langsmith_client = Client()\n",
+    "dataset_name =  f\"Mecainic - evaluation dataset {uuid4.hex[0:8]}\";\n",
+    "\n",
+    "dataset = langsmith_client.create_dataset(\n",
+    "    dataset_name= dataset_name,\n",
+    "    description=\"Questions on a instruction manual for use on validating mecainic RAG\"\n",
+    ")\n",
+    "\n",
+    "langsmith_client.create_examples(\n",
+    "    inputs=[{\"question\": question} for question in dev_validation_questions],\n",
+    "    outputs= dev_key_words_it_should_mention,\n",
+    "    dataset_id=dataset.id\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langsmith.evaluation import EvaluationResult, run_evaluator\n",
+    "\n",
+    "@run_evaluator\n",
+    "def must_contain(run, example) -> EvaluationResult:\n",
+    "    prediction = run.outputs.get(\"output\") or \"\"\n",
+    "    required = example.output.get(\"must_contain\") or []\n",
+    "    score = all(phrase in prediction for phrase in required)\n",
+    "    return EvaluationResult(key=\"must_contain\", score=score)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.smith import RunEvalConfig, run_on_dataset\n",
+    "\n",
+    "eval_configuration = RunEvalConfig(\n",
+    "    custom_evaluators=[must_contain],\n",
+    "    evaluators=[\n",
+    "        \"criteria\",\n",
+    "        \"cot_qa\",\n",
+    "    ],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "langsmith_client.run_on_dataset(\n",
+    "    dataset_name=dataset_name,\n",
+    "    llm_or_chain_factory=mecanic_qa_chain,\n",
+    "    evaluation=eval_configuration,\n",
+    "    verbose=True,\n",
+    "    project_name=f\"Mecainic RAG evaluation - {uuid4.hex[0:8]}\",\n",
+    "    project_metadata={\"version\": \"1.0.0\"}\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
